<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="profile_image">Profile Image</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="button">Button</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="media">Media</string>
    <string name="comment">Comment</string>
    <string name="retweet">Retweet</string>
    <string name="like">Like</string>
    <string name="reply">Reply</string>
    <string name="tweet_your_reply">Tweet your reply</string>
    <string name="retweets">Retweets</string>
    <string name="likes">Likes</string>
    <string name="banner">banner</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="retweeted">retweeted</string>

    <color name="medium_green">#ff17bf63</color>
    <color name="medium_gray">#ffaab8c2</color>
    <color name="medium_gray_30">#4daab8c2</color>
    <color name="medium_gray_50">#80aab8c2</color>
    <color name="light_gray">#ffccd6dd</color>
    <color name="medium_red">#ffe0245e</color>
    <color name="medium_red_30">#4de0245e</color>
    <color name="medium_red_50">#80e0245e</color>
    <color name="twitter_blue">#ff1da1f2</color>
    <color name="twitter_blue_30">#4d1da1f2</color>
    <color name="twitter_blue_50">#801da1f2</color>
    <color name="twitter_blue_fill_pressed">#ff1370a9</color>
    <color name="inline_action">@color/medium_gray</color>
    <color name="inline_action_disabled">@color/medium_gray_30</color>
    <color name="inline_action_like">@color/medium_red</color>
    <color name="inline_action_like_pressed">@color/medium_red_50</color>
    <color name="inline_action_pressed">@color/medium_gray_50</color>
    <color name="inline_action_retweet">@color/medium_green</color>
    <color name="inline_action_retweet_pressed">@color/medium_gray_50</color>
    <color name="dark_background">#15202a</color>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tweet">Tweet</string>
    <string name="profile">Profile</string>

</resources>