<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/tvHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvName"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/tvName"
        tools:text="@estebanquitoPC" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHandle"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        tools:text="This is my tweet!!" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:textStyle="bold"
        tools:text="Estebanquito " />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvHandle"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/tvHandle"
        tools:text="9h" />

    <ImageView
        android:id="@+id/ivMedia"
        android:layout_width="358dp"
        android:layout_height="216dp"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/media" />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/ivMedia"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-2dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnComment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/comment"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/vector_compose_dm_fab"
            app:tint="#000000"
            tools:srcCompat="@drawable/vector_compose_dm_fab" />

        <ImageButton
            android:id="@+id/btnRetweet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/retweet"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_vector_retweet_stroke"
            tools:srcCompat="@drawable/ic_vector_retweet_stroke" />

        <ImageButton
            android:id="@+id/btnLike"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/like"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_vector_heart_stroke"
            tools:srcCompat="@drawable/ic_vector_heart_stroke" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/llButtons"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

</RelativeLayout>