<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/ivPBanner"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/banner" />

    <ImageView
        android:id="@+id/ivPProfilePicture"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-100dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivPBanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPBanner"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/tvPName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivPProfilePicture"
        app:layout_constraintTop_toBottomOf="@+id/ivPProfilePicture"
        tools:text="Estebanquito" />

    <TextView
        android:id="@+id/tvPScreenName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPName"
        app:layout_constraintStart_toStartOf="@+id/tvPName"
        app:layout_constraintTop_toBottomOf="@+id/tvPName"
        tools:text="estebanquitopc" />

    <TextView
        android:id="@+id/ivPBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPScreenName"
        app:layout_constraintStart_toStartOf="@+id/tvPScreenName"
        app:layout_constraintTop_toBottomOf="@+id/tvPScreenName"
        tools:text="¿Cuál banquito?" />

    <TextView
        android:id="@+id/tvPFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="@+id/ivPBio"
        app:layout_constraintTop_toBottomOf="@id/ivPBio"
        tools:text="111" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/followers"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPFollowers"
        app:layout_constraintStart_toEndOf="@+id/tvPFollowers"
        app:layout_constraintTop_toTopOf="@+id/tvPFollowers" />

    <TextView
        android:id="@+id/tvPFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:text="118" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/following"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPFollowing"
        app:layout_constraintStart_toEndOf="@+id/tvPFollowing"
        app:layout_constraintTop_toTopOf="@+id/tvPFollowing" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPTweets"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>